--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.6",
     "@rails/actioncable": "^7.0.4-2",
+    "@rails/actiontext": "^7.0.4-2",
     "bootstrap": "^5.2.3",
     "stimulus-confetti": "^1.0.1",
+    "trix": "^2.0.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
