--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@popperjs/core": "^2.11.6",
     "@rails/actioncable": "^7.0.4-2",
     "@rails/actiontext": "^7.0.4-2",
+    "@rails/ujs": "^7.0.4-2",
     "bootstrap": "^5.2.3",
     "stimulus-confetti": "^1.0.1",
     "trix": "^2.0.4",
